Tue Aug 20 01:18:17 1991  Per Cederqvist  (ceder at lysator)

	* clienttypes.el (read-list-delete-text) Tog bort en gammal,
	  bortkommenterad, rekursiv, version.

Mon Aug 19 03:35:15 1991  Per Cederqvist  (ceder at lysator)

	* commands2.el, swedish-strings.el (kom-postpone) Nyskriven.

	* lyskom-rest.el (kom-view-next-text) Anropa aldrig lyskom-is-read
	  med textnummer 0.

Mon Aug 19 01:08:49 1991  Linus Tolke Y  (linus at robin)

	* commands2.el (lyskom-set-motd): Nu f}r meddelandet ingen
	  mottagare per default.

	* commands2.el, swedish-strings.el (lyskom-set-motd-2,
	  lyskom-set-motd-3, lyskom-remove-motd): Nu s{tter den
	  lyskom-server-info ocks} om det gick bra.

	* swedish-strings.el (lyskom-strings): Klarare n{r det g{ller
	  {ndra l|senord.

	* edit-text.el (lyskom-edit-mode): Nu klarar den {ven fallet
	  n{r lyskom-edit-mode-mode-hook inte s{tter current-local-map.

 Sun Aug 18 19:32:00 1991  Per Cederqvist  (ceder at lysator)

	* lyskom-rest.el (lyskom-filter) Nu sparas match-data alltid. R{tt
	  buffert }terst{lls. Inhibit-quit s{tts ej globalt.

Sun Aug 18 02:07:59 1991  Linus Tolke Y  (linus at lysator)

	* commands2.el (lyskom-status-conf, lyskom-status-pers-2): Bytt
	  n}gra gl|mda  
	  (lyskom-insert (lyskom-format )) till (lyskom-format-insert )

	* lyskom-rest.el (iso-8859-1-table): Patchat tabellen f|r thorn,
	  eth. N}gon annan sm}sak ocks}.

	* commands2.el, swedish-strings.el (lyskom-status-conf,
	  lyskom-status-pers-2): Nu skriver den ut n{r personer och m|ten
	  skapades.

Sat Aug 17 04:30:01 1991  Linus Tolke Y  (linus at lysator)

	* vars.el (lyskom-elisp-variables): Nu {r den defconst f|r att man
	  skall kunna {ndra mellan versionerna.

Thu Aug 15 18:43:17 1991  Per Cederqvist  (ceder at lysator)

	* startup.el (lyskom-mode): (put 'lyskom-mode 'mode-class 'special)

Sat Aug 17 00:50:34 1991  Linus Tolke Y  (linus at lysator)

	* commands1.el (lyskom-change-pres-of-motd-2,